Bug 81467 Fixed display of subject so it's big enough and wraps.
http://bugzilla.zimbra.com/show_bug.cgi?id=81467

Copied from Perforce
 Change: 486179

--- a/WebRoot/t/resources/sass/widgets/mail/_ztmsgview.scss
+++ b/WebRoot/t/resources/sass/widgets/mail/_ztmsgview.scss
@@ -29,9 +29,11 @@ $msgBkgdColor: $white;
 }
 
 .zcs-conv-title-bar {
-	background-color: $list-bg-color;	
-	padding-top: 0.6em;
-	padding-left: 0.6em
+	background-color: $list-bg-color;
+	font-size:1.6em;
+	line-height:1.4em;
+	padding-top: 0.3em;
+	padding-left: 0.6em;
 }
 
 /* BEGIN MSG HEADER */
